--- a/.prettierignore
+++ b/.prettierignore
@@ -5,3 +5,27 @@ package.json
 .umi
 .umi-production
 .umi-test
+
+.DS_Store
+
+CNAME
+LICENSE
+package.json
+package-lock.json
+
+*.lock
+yarn-error.log
+*debug.log
+
+.gitignore
+.prettierignore
+.eslintignore
+.eslintcache
+.history
+
+*.svg
+*.png
+*.jpg
+*.gif
+*.bmp
+docs-dist
