--- a/package.json
+++ b/package.json
@@ -11,39 +11,64 @@
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "lint:js": "eslint --ext .js,.jsx,.ts,.tsx src",
+    "lint-fix:js": "npm run lint:js -- --fix",
+    "lint:style": "stylelint src/**/*.less",
+    "lint-fix:style": "npm run lint:stylelint -- --fix",
+    "lint-staged": "lint-staged",
+    "commit": "cz"
   },
   "module": "es/index.js",
   "typings": "es/index.d.ts",
   "gitHooks": {
-    "pre-commit": "lint-staged"
+    "pre-commit": "lint-staged",
+    "commit-msg": "npx --no -- commitlint --edit \"$1\""
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   },
   "lint-staged": {
-    "*.{js,jsx,less,md,json}": [
-      "prettier --write"
-    ],
-    "*.ts?(x)": [
-      "prettier --parser=typescript --write"
-    ]
+    "**/*.{css,less}": "stylelint --fix",
+    "**/*.{js,jsx,ts,tsx}": "eslint",
+    "**/*.{css,scss,less,js,jsx,ts,tsx,json,md}": "prettier -w"
   },
   "dependencies": {
     "react": "^16.12.0 || ^17.0.0"
   },
   "devDependencies": {
     "@ant-design/icons": "^4.7.0",
+    "@commitlint/cli": "^16.2.3",
+    "@commitlint/config-conventional": "^16.2.1",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
+    "@typescript-eslint/eslint-plugin": "^5.18.0",
+    "@typescript-eslint/parser": "^5.18.0",
     "@umijs/fabric": "^2.8.1",
     "@umijs/test": "^3.0.5",
     "antd": "^4.19.5",
     "antd-more": "^3.2.3",
     "bankcard": "^3.0.1",
+    "cz-conventional-changelog": "^3.3.0",
     "dumi": "^1.1.0",
+    "eslint": "^8.12.0",
+    "eslint-plugin-react": "^7.29.4",
+    "eslint-plugin-react-hooks": "^4.4.0",
     "father-build": "^1.17.2",
     "gh-pages": "^3.0.0",
-    "lint-staged": "^10.0.7",
-    "prettier": "^2.2.1",
+    "lint-staged": "^12.3.7",
+    "prettier": "^2.6.2",
+    "prettier-plugin-two-style-order": "^1.0.1",
+    "stylelint": "^14.6.1",
+    "stylelint-config-css-modules": "^4.1.0",
+    "stylelint-config-prettier": "^9.0.3",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^25.0.0",
+    "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
+    "stylelint-no-unsupported-browser-features": "^5.0.3",
     "yorkie": "^2.0.0"
   }
 }
