--- a/package.json
+++ b/package.json
@@ -4,10 +4,7 @@
   "version": "1.0.0",
   "scripts": {
     "start": "dumi dev",
-    "docs:build": "dumi build",
-    "docs:deploy": "gh-pages -d docs-dist",
-    "build": "father-build",
-    "deploy": "npm run docs:build && npm run docs:deploy",
+    "build": "dumi build",
     "prettier": "prettier --write \"**/*.{js,jsx,tsx,ts,less,md,json}\"",
     "test": "umi-test",
     "test:coverage": "umi-test --coverage",
@@ -51,6 +48,7 @@
     "@umijs/test": "^3.0.5",
     "antd": "^4.19.5",
     "antd-more": "^3.2.3",
+    "babel-plugin-import": "^1.13.3",
     "bankcard": "^3.0.1",
     "cz-conventional-changelog": "^3.3.0",
     "dumi": "^1.1.0",
