--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "eslint-plugin-react-hooks": "^4.4.0",
     "father-build": "^1.17.2",
     "gh-pages": "^3.0.0",
+    "jsbarcode": "^3.11.5",
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
     "prettier-plugin-two-style-order": "^1.0.1",
