--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "lint-staged": "^12.3.7",
     "prettier": "^2.6.2",
     "prettier-plugin-two-style-order": "^1.0.1",
+    "qr-code-styling": "^1.6.0-rc.1",
     "stylelint": "^14.6.1",
     "stylelint-config-css-modules": "^4.1.0",
     "stylelint-config-prettier": "^9.0.3",
