--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
+    "@types/react-copy-to-clipboard": "^5.0.2",
     "@typescript-eslint/eslint-plugin": "^5.18.0",
     "@typescript-eslint/parser": "^5.18.0",
     "@umijs/fabric": "^2.8.1",
@@ -62,6 +63,7 @@
     "prettier": "^2.6.2",
     "prettier-plugin-two-style-order": "^1.0.1",
     "qr-code-styling": "^1.6.0-rc.1",
+    "react-copy-to-clipboard": "^5.1.0",
     "stylelint": "^14.6.1",
     "stylelint-config-css-modules": "^4.1.0",
     "stylelint-config-prettier": "^9.0.3",
@@ -69,7 +71,7 @@
     "stylelint-config-standard": "^25.0.0",
     "stylelint-declaration-block-no-ignored-properties": "^2.5.0",
     "stylelint-no-unsupported-browser-features": "^5.0.3",
-    "util-helpers": "^4.8.0",
+    "util-helpers": "^4.8.2",
     "yorkie": "^2.0.0"
   }
 }
