--- a/package.json
+++ b/package.json
@@ -31,7 +31,8 @@
     "**/*.{css,scss,less,js,jsx,ts,tsx,json,md}": "prettier -w"
   },
   "dependencies": {
-    "react": "^16.12.0 || ^17.0.0"
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0"
   },
   "devDependencies": {
     "@ant-design/icons": "^4.7.0",
