--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "gitHooks": {
     "pre-commit": "lint-staged",
-    "commit-msg": "npx --no -- commitlint --edit \"$1\""
+    "commit-msg": "yarn run commitlint --edit \"$1\""
   },
   "config": {
     "commitizen": {
